Changed Waybar config.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,95 @@
+@keyframes blink-warning {
+    70% {
+        color: @light;
+    }
+
+    to {
+        color: @light;
+        background-color: @warning;
+    }
+}
+
+@keyframes blink-critical {
+    70% {
+        color: @light;
+    }
+
+    to {
+        color: @light;
+        background-color: @critical;
+    }
+}
+
+
+/* -----------------------------------------------------------------------------
+ * Styles
+ * -------------------------------------------------------------------------- */
+
+/* COLORS */
+
+/* Gruvbox Dark */
+
+/*@define-color bg #353C4A;*/
+@define-color light #D8DEE9;
+/*@define-color dark @nord_dark_font;*/
+@define-color warning #ebcb8b;
+/*@define-color critical #BF616A;*/
+/*@define-color mode @bg;*/
+/*@define-color workspaces @bg;*/
+/*@define-color workspaces @nord_dark_font;*/
+/*@define-color workspacesfocused #655b53;*/
+/*@define-color tray @bg;*/
+/*@define-color workspacesfocused #4C566A;
+@define-color tray @workspacesfocused;
+@define-color sound #EBCB8B;
+@define-color network #5D7096;
+@define-color memory #546484;
+@define-color cpu #596A8D;
+@define-color temp #4D5C78;
+@define-color layout #5e81ac;
+@define-color battery #88c0d0;
+@define-color date #434C5E;
+@define-color time #434C5E;
+@define-color backlight #434C5E;*/
+@define-color nord_bg #282828;
+@define-color nord_bg_blue @bg;
+@define-color nord_light #D8DEE9;
+
+@define-color nord_dark_font #272727;
+
+
+@define-color bg_trans rgba(80, 80, 80, 0.5);
+@define-color bg #282828;
+@define-color critical #BF616A;
+@define-color tray @bg;
+@define-color mode @bg;
+
+@define-color bluetint #448488;
+@define-color bluelight #83a597;
+@define-color magenta-dark #b16185;
+
+
+@define-color font_gruv_normal #ebdbb2;
+@define-color font_gruv_faded #a89985;
+@define-color font_gruv_darker #D8DEE9;
+@define-color font_dark_alternative #655b53;
+
+/* Reset all styles */
 * {
+    border: none;
+    border-radius: 0px;
+    min-height: 0;
+    /*margin: 0.15em 0.25em 0.15em 0.25em;*/
+}
+
+/* The whole bar */
+#waybar {
+    background: @bg;
+    color: @light;
+    /* font-family: "Cantarell", "Font Awesome 5 Pro"; */
     font-family: JetBrainsMono Nerd Font;
-    font-size: 10pt;
+    /* font-family: "Cantarell", "Font Awesome 5 Pro"; */
+    font-size: 9pt;
     font-weight: bold;
 }
 
@@ -8,7 +97,7 @@ window#waybar {
 
 
     /*border-bottom: 2px solid #D65D0E;*/
-    background-color: rgba(208,80,14,0.1);
+    background-color: @bg-trans;
     color: #D4BE98;
     transition-property: background-color;
     transition-duration: .5s;
@@ -18,123 +107,379 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
-button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
+/* Each module */
+#battery,
+#clock,
+#cpu,
+#custom-layout,
+#memory,
+#mode,
+#network,
+#pulseaudio,
+#temperature,
+#custom-alsa,
+#custom-pacman,
+#custom-weather,
+#custom-gpu,
+#custom-playerctl,
+#tray,
+#backlight,
+#language,
+#custom-cpugovernor,
+#custom-scratchpad-indicator,
+#custom-pacman,
+#idle_inhibitor,
+#bluetooth {
+    /*    padding-left: 0.3em;
+    padding-right: 0.3em;*/
+    padding: 0.6em 0.8em;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px #D4BE98;
+/* Each module that should blink */
+#mode,
+#memory,
+#temperature,
+#battery {
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
+
+/* Each critical module */
+#memory.critical,
+#cpu.critical,
+#temperature.critical,
+#battery.critical {
+    color: @critical;
+}
+
+/* Each critical that should blink */
+#mode,
+#memory.critical,
+#temperature.critical,
+#battery.critical.discharging {
+    animation-name: blink-critical;
+    animation-duration: 2s;
+}
+
+/* Each warning */
+#network.disconnected,
+#memory.warning,
+#cpu.warning,
+#temperature.warning,
+#battery.warning {
+    background: @warning;
+    color: @nord_dark_font;
+}
+
+/* Each warning that should blink */
+#battery.warning.discharging {
+    animation-name: blink-warning;
+    animation-duration: 3s;
+}
+
+/* Adding arrows to boxes */
+/*#custom-arrow1 {
+    font-size: 16px;
+    color: @sound;
+    background: transparent;
+}
+
+#custom-arrow2 {
+    font-size: 16px;
+    color: @network;
+    background: @sound;
+}
+
+#custom-arrow3 {
+    font-size: 16px;
+    color: @memory;
+    background: @network;
+}
+
+#custom-arrow4 {
+    font-size: 16px;
+    color: @cpu;
+    background: @memory;
+}
+
+#custom-arrow5 {
+    font-size: 16px;
+    color: @temp;
+    background: @cpu;
+}
+
+#custom-arrow6 {
+    font-size: 16px;
+    color: @layout;
+    background: @temp;
+}
+
+#custom-arrow7 {
+    font-size: 16px;
+    color: @battery;
+    background: @layout;
+}
+
+#custom-arrow8 {
+    font-size: 16px;
+    color: @date;
+    background: @battery;
+}
+
+#custom-arrow9 {
+    font-size: 16px;
+    color: @time;
+    background: @date;
+}*/
+
+#custom-arrow1 {
+    font-size: 2em;
+    color: @bg;
+    background: @bluetint;
+}
+
+#custom-arrow2 {
+    font-size: 2em;
+    color: @bluetint;
+    background: @font_dark_alternative;
+}
+
+#custom-arrow3 {
+    font-size: 2em;
+    color: @font_dark_alternative;
+    background: @bg-trans;
+}
+
+#custom-arrow4 {
+    font-size: 2.15em;
+    color: @font_gruv_normal;
+    background: @bg-trans;
+}
+
+#custom-arrow5 {
+    font-size: 2.19em;
+    color: @font_gruv_normal;
+    background: @bg-trans;
+}
+
+#custom-arrow6 {
+    font-size: 2em;
+    color: @font_dark_alternative;
+    background: @bg-trans;
+}
+
+#custom-arrow7 {
+    font-size: 2em;
+    color: @bluetint;
+    background: @font_dark_alternative;
+}
+
+#custom-arrow8 {
+    font-size: 2em;
+    color: @bg;
+    background: @bluetint;
+}
+
+/* And now modules themselves in their respective order */
+#clock.time {
+    background: @bg;
+    color: @font_gruv_normal;
+}
+
+#clock.date {
+    background: @bg;
+    color: @font_gruv_faded;
+}
+
+#clock {
+    background: @bg;
+    color: @font_gruv_normal;
+}
+
+#custom-scratchpad-indicator {
+    background: @bluetint;
+    color: @font_gruv_normal;
+}
+
+#language {
+    background: @bg;
+    color: @font_gruv_normal;
+}
+
+#custom-kdeconnect {
+    background: @bg;
+    color: @font_gruv_normal;
+}
+
+#custom-pacman {
+    background: @bluetint;
+    color: @font_gruv_normal;
+}
+
+#idle_inhibitor {
+    background: @font_dark_alternative;
+    color: @font_gruv_normal;
+}
+
+#custom-playerctl {
+    font-size: 0.9em;
+    color: @font_gruv_normal;
+}
+
+#custom-playerctl.paused {
+    color: @font_dark_alternative;
+    font-size: 0.9em;
+}
+
+/* Workspaces stuff */
+#workspaces {}
 
 #workspaces button {
-    padding: 0 8px 0 3px;
-    background-color: transparent;
-    color: #D4BE98;
-}
-
-#workspaces button:hover {
-   background-color: #504945; 
+    background: @font_gruv_normal;
+    padding: 0em 1.2em;
+    color: @font_dark_alternative;
+    min-width: 0em;
 }
 
 #workspaces button.focused {
-    background-color: #504945;
-    box-shadow: inset 0 -3px #D4BE98;
+    background: @font_dark_alternative;
+    color: @font_gruv_normal;
+    /* font-weight: bolder; */
+    /* Somewhy the bar-wide setting is ignored*/
 }
+
 #workspaces button.active {
-    background-color: #D65D0E;
-    box-shadow: inset 0 -3px #fe8019;
-    color: #FBF1C7;
+    /* background: @font_dark_alternative; */
+    background: @bg-trans;
+    color: @font_gruv_normal;
+    /* font-weight: bolder; */
+    /* Somewhy the bar-wide setting is ignored*/
 }
 
 #workspaces button.urgent {
-    background-color: #EA6962;
+    color: #c9545d;
+    opacity: 1;
 }
 
-#clock,
-#backlight,
-#workspaces,
-#window,
-#group-status,
-#group-power,
-#tray,
-#group-hardware{
-    padding: 0 10px;
-    color: #ebdbb2;
-    background-color: #282828;
-    border-radius: 15px;
-    opacity: 0.8;
-    border: 1px solid #3c3836;
-}
-#network,
-#pulseaudio,
-#bluetooth,
-#cpu,
-#memory,
-#custom-power,
-#custom-reboot,
-#custom-lock,
-#custom-quit,
-#user{
-  padding: 0 8px;
-}
-#tray{
-  padding: 0px 10px;
+#custom-cpugovernor {
+    background-color: @font_dark_alternative;
+    color: @font_gruv_normal;
 }
 
-#window,
-#workspaces,
-#custom.power,
-#custom.quit{
-    margin: 0 4px;
-}
-#power{
-  color: #000000;
-}
+#custom-cpugovernor.perf {}
 
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 2px;
+#memory {
+    background: @bluetint;
+    color: @font_gruv_normal;
+    padding-left: 1.0em;
+    padding-right: 0.5em;
 }
 
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 2px;
+#cpu {
+    background: @bluetint;
+    color: @font_gruv_normal;
+    padding-left: 0.6em;
+    padding-right: 0.2em;
 }
 
-
-@keyframes blink {
-    to {
-        background-color: #D4BE98;
-        color: #000000;
-    }
+#cpu.critical {
+    color: @nord_dark_font;
+    background: @critical;
 }
 
-#network.disconnected,
-#network.linked,
-#network.disabled{
-    color: #d3869b;
+#temperature {
+    background-color: @bluetint;
+    color: @font_gruv_normal;
+    padding-right: 0em;
 }
-#network.ethernet {
-    color: #80c07c;
+
+#temperature.critical {
+    background: @critical;
+}
+
+#custom-gpu {
+    background: @bluetint;
+    color: @font_gruv_normal;
+    padding-left: 0em;
+}
+
+#pulseaudio {
+    background: @bluetint;
+    color: @font_gruv_normal;
 }
 
 #pulseaudio.muted {
-    color: #fb4934;
+    color: #fb4833;
+}
+
+#pulseaudio.source-muted {
+    /* moved to config */
+}
+
+#bluetooth {
+    background: @font_dark_alternative;
+    color: @font_gruv_normal;
 }
 
 #bluetooth.connected {
     color: #83a598;
 }
 
+#network {
+    background: @font_dark_alternative;
+    color: @font_gruv_faded;
+}
 
+#network.disconnected,
+#network.linked,
+#network.disabled {
+    color: #d3869b;
+}
 
+#network.ethernet {
+    color: #80c07c;
+}
 
+#tray {
+    background: @bg;
+    color: @font_gruv_normal;
+}
 
+#custom-alsa {
+    background: @sound;
+}
 
+/* #memory { */
+/*     background: @memory; */
+/* } */
+
+#custom-layout {
+    background: @layout;
+}
+
+#mode {
+    /* Shown current Sway mode (resize etc.) */
+    color: @light;
+    background: @mode;
+}
+
+#battery {
+    background: @battery;
+}
+
+#backlight {
+    background: @backlight;
+}
+
+#window {
+    margin-right: 40px;
+    margin-left: 40px;
+    font-weight: normal;
+}
+
+#custom-weather {
+    background: @mode;
+    font-weight: bold;
+    padding: 0 0.6em;
+}
