--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -87,7 +87,8 @@
     background: @bg;
     color: @light;
     /* font-family: "Cantarell", "Font Awesome 5 Pro"; */
-    font-family: JetBrainsMono Nerd Font;
+    font-family: "JetBrainsMonoNerdFont";
+    /* font-family: "JetBrainsMono Nerd Font"; */
     /* font-family: "Cantarell", "Font Awesome 5 Pro"; */
     font-size: 9pt;
     font-weight: bold;
